<resources>
    <string name="app_name">PremiereQueteStudio</string>
    <string name="title">Welcome to the Wild Code Scool :</string>
    <string name="checkbox">Oui je souhaite devenir un Wilder :</string>
    <string name="first_name">Prénom:</string>
    <string name="last_name">Nom:</string>
    <string name="validate">Valider</string>
    <string name="error">Tu dois renseigner le nom et prénom!</string>
    <string name="congratulation">Félicitation!</string>
</resources>
